--- a/rahim_ghani_predict/features-development-network.ipynb
+++ b/rahim_ghani_predict/features-development-network.ipynb
@@ -140,6 +140,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "horizontal-coverage",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "posted-stability",
    "metadata": {},
@@ -150,7 +158,7 @@
     "#create column for one-hot-encode for country\n",
     "column_name = list()\n",
     "for country_code in list(pd.get_dummies(org_processing_df.country_code).columns):\n",
-    "    column_name.append(str('is_' + country_code))\n",
+    "    column_name.append(str('is_' + country_code.lower()))\n",
     "    \n",
     "country_one_hot = pd.get_dummies(org_processing_df.country_code, columns=column_name)\n",
     "new_column_dict = dict(zip(country_one_hot.columns,column_name))\n",
@@ -202,22 +210,22 @@
        "      <th>facebook_url</th>\n",
        "      <th>linkedin_url</th>\n",
        "      <th>twitter_url</th>\n",
-       "      <th>is_ABW</th>\n",
-       "      <th>is_AFG</th>\n",
-       "      <th>is_AGO</th>\n",
-       "      <th>is_AIA</th>\n",
-       "      <th>is_ALB</th>\n",
+       "      <th>is_abw</th>\n",
+       "      <th>is_afg</th>\n",
+       "      <th>is_ago</th>\n",
+       "      <th>is_aia</th>\n",
+       "      <th>is_alb</th>\n",
        "      <th>...</th>\n",
-       "      <th>is_UKR</th>\n",
-       "      <th>is_URY</th>\n",
-       "      <th>is_USA</th>\n",
-       "      <th>is_UZB</th>\n",
-       "      <th>is_VEN</th>\n",
-       "      <th>is_VNM</th>\n",
-       "      <th>is_YEM</th>\n",
-       "      <th>is_ZAF</th>\n",
-       "      <th>is_ZMB</th>\n",
-       "      <th>is_ZWE</th>\n",
+       "      <th>is_ukr</th>\n",
+       "      <th>is_ury</th>\n",
+       "      <th>is_usa</th>\n",
+       "      <th>is_uzb</th>\n",
+       "      <th>is_ven</th>\n",
+       "      <th>is_vnm</th>\n",
+       "      <th>is_yem</th>\n",
+       "      <th>is_zaf</th>\n",
+       "      <th>is_zmb</th>\n",
+       "      <th>is_zwe</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>org_uuid</th>\n",
@@ -543,7 +551,7 @@
        "fffe3b0b-8545-4414-9c0e-a3f961c4e420             0             0            0   \n",
        "ffffabce-6d4a-b3d1-13c0-4e90cedf5270             1             1            1   \n",
        "\n",
-       "                                      is_ABW  is_AFG  is_AGO  is_AIA  is_ALB  \\\n",
+       "                                      is_abw  is_afg  is_ago  is_aia  is_alb  \\\n",
        "org_uuid                                                                       \n",
        "000014da-0c46-b9cb-0941-3a93c027b119       0       0       0       0       0   \n",
        "00002470-bff7-6226-5800-0ca1b3787b6f       0       0       0       0       0   \n",
@@ -557,7 +565,7 @@
        "fffe3b0b-8545-4414-9c0e-a3f961c4e420       0       0       0       0       0   \n",
        "ffffabce-6d4a-b3d1-13c0-4e90cedf5270       0       0       0       0       0   \n",
        "\n",
-       "                                      ...  is_UKR  is_URY  is_USA  is_UZB  \\\n",
+       "                                      ...  is_ukr  is_ury  is_usa  is_uzb  \\\n",
        "org_uuid                              ...                                   \n",
        "000014da-0c46-b9cb-0941-3a93c027b119  ...       0       0       1       0   \n",
        "00002470-bff7-6226-5800-0ca1b3787b6f  ...       0       0       1       0   \n",
@@ -571,7 +579,7 @@
        "fffe3b0b-8545-4414-9c0e-a3f961c4e420  ...       0       0       0       0   \n",
        "ffffabce-6d4a-b3d1-13c0-4e90cedf5270  ...       0       0       1       0   \n",
        "\n",
-       "                                      is_VEN  is_VNM  is_YEM  is_ZAF  is_ZMB  \\\n",
+       "                                      is_ven  is_vnm  is_yem  is_zaf  is_zmb  \\\n",
        "org_uuid                                                                       \n",
        "000014da-0c46-b9cb-0941-3a93c027b119       0       0       0       0       0   \n",
        "00002470-bff7-6226-5800-0ca1b3787b6f       0       0       0       0       0   \n",
@@ -585,7 +593,7 @@
        "fffe3b0b-8545-4414-9c0e-a3f961c4e420       0       0       0       0       0   \n",
        "ffffabce-6d4a-b3d1-13c0-4e90cedf5270       0       0       0       0       0   \n",
        "\n",
-       "                                      is_ZWE  \n",
+       "                                      is_zwe  \n",
        "org_uuid                                      \n",
        "000014da-0c46-b9cb-0941-3a93c027b119       0  \n",
        "00002470-bff7-6226-5800-0ca1b3787b6f       0  \n",
@@ -610,6 +618,246 @@
    "source": [
     "main_processing_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "natural-minneapolis",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import event appearance file csv\n",
+    "event_appear_df = pd.read_csv(R\"d:/msc-project/data/pre-processed/event_appearances_preprocessed.csv\",encoding='utf-8',\n",
+    "                              index_col='event_appear_uuid')\n",
+    "#,parse_dates= ['founded_on','went_public_on','acquired_on','closed_on'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "acceptable-finland",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event_appear_name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>event_uuid</th>\n",
+       "      <th>event_name</th>\n",
+       "      <th>participant_uuid</th>\n",
+       "      <th>participant_name</th>\n",
+       "      <th>participant_type</th>\n",
+       "      <th>appearance_type</th>\n",
+       "      <th>short_description</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>event_appear_uuid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30c4023d-b694-4704-97d7-cd99cd06ecce</th>\n",
+       "      <td>Adobe MAX 2014's sponsor - CDW Corporation</td>\n",
+       "      <td>event_appearance</td>\n",
+       "      <td>135a927a-b238-037e-50e2-d3a2e3511ed2</td>\n",
+       "      <td>Adobe MAX 2014</td>\n",
+       "      <td>ae883a31-3739-7eb9-4ce0-463ee070ed79</td>\n",
+       "      <td>CDW Corporation</td>\n",
+       "      <td>organization</td>\n",
+       "      <td>sponsor</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dffe0542-3dac-4228-a997-3eed42cbd67e</th>\n",
+       "      <td>Adobe MAX 2014's sponsor - Microsoft</td>\n",
+       "      <td>event_appearance</td>\n",
+       "      <td>135a927a-b238-037e-50e2-d3a2e3511ed2</td>\n",
+       "      <td>Adobe MAX 2014</td>\n",
+       "      <td>fd80725f-53fc-7009-9878-aeecf1e9ffbb</td>\n",
+       "      <td>Microsoft</td>\n",
+       "      <td>organization</td>\n",
+       "      <td>sponsor</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21884e6c-d097-4c54-8513-10536a0ea60d</th>\n",
+       "      <td>Adobe MAX 2014's sponsor - Twitter</td>\n",
+       "      <td>event_appearance</td>\n",
+       "      <td>135a927a-b238-037e-50e2-d3a2e3511ed2</td>\n",
+       "      <td>Adobe MAX 2014</td>\n",
+       "      <td>5da6106f-0d27-0d37-e9d7-dcfeccc1f709</td>\n",
+       "      <td>Twitter</td>\n",
+       "      <td>organization</td>\n",
+       "      <td>sponsor</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                               event_appear_name  \\\n",
+       "event_appear_uuid                                                                  \n",
+       "30c4023d-b694-4704-97d7-cd99cd06ecce  Adobe MAX 2014's sponsor - CDW Corporation   \n",
+       "dffe0542-3dac-4228-a997-3eed42cbd67e        Adobe MAX 2014's sponsor - Microsoft   \n",
+       "21884e6c-d097-4c54-8513-10536a0ea60d          Adobe MAX 2014's sponsor - Twitter   \n",
+       "\n",
+       "                                                  type  \\\n",
+       "event_appear_uuid                                        \n",
+       "30c4023d-b694-4704-97d7-cd99cd06ecce  event_appearance   \n",
+       "dffe0542-3dac-4228-a997-3eed42cbd67e  event_appearance   \n",
+       "21884e6c-d097-4c54-8513-10536a0ea60d  event_appearance   \n",
+       "\n",
+       "                                                                event_uuid  \\\n",
+       "event_appear_uuid                                                            \n",
+       "30c4023d-b694-4704-97d7-cd99cd06ecce  135a927a-b238-037e-50e2-d3a2e3511ed2   \n",
+       "dffe0542-3dac-4228-a997-3eed42cbd67e  135a927a-b238-037e-50e2-d3a2e3511ed2   \n",
+       "21884e6c-d097-4c54-8513-10536a0ea60d  135a927a-b238-037e-50e2-d3a2e3511ed2   \n",
+       "\n",
+       "                                          event_name  \\\n",
+       "event_appear_uuid                                      \n",
+       "30c4023d-b694-4704-97d7-cd99cd06ecce  Adobe MAX 2014   \n",
+       "dffe0542-3dac-4228-a997-3eed42cbd67e  Adobe MAX 2014   \n",
+       "21884e6c-d097-4c54-8513-10536a0ea60d  Adobe MAX 2014   \n",
+       "\n",
+       "                                                          participant_uuid  \\\n",
+       "event_appear_uuid                                                            \n",
+       "30c4023d-b694-4704-97d7-cd99cd06ecce  ae883a31-3739-7eb9-4ce0-463ee070ed79   \n",
+       "dffe0542-3dac-4228-a997-3eed42cbd67e  fd80725f-53fc-7009-9878-aeecf1e9ffbb   \n",
+       "21884e6c-d097-4c54-8513-10536a0ea60d  5da6106f-0d27-0d37-e9d7-dcfeccc1f709   \n",
+       "\n",
+       "                                     participant_name participant_type  \\\n",
+       "event_appear_uuid                                                        \n",
+       "30c4023d-b694-4704-97d7-cd99cd06ecce  CDW Corporation     organization   \n",
+       "dffe0542-3dac-4228-a997-3eed42cbd67e        Microsoft     organization   \n",
+       "21884e6c-d097-4c54-8513-10536a0ea60d          Twitter     organization   \n",
+       "\n",
+       "                                     appearance_type short_description  \n",
+       "event_appear_uuid                                                       \n",
+       "30c4023d-b694-4704-97d7-cd99cd06ecce         sponsor               NaN  \n",
+       "dffe0542-3dac-4228-a997-3eed42cbd67e         sponsor               NaN  \n",
+       "21884e6c-d097-4c54-8513-10536a0ea60d         sponsor               NaN  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "event_appear_df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dominican-plain",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top50_events = event_appear_df['event_name'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "connected-argentina",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MWC Barcelona                                 3424\n",
+       "Web Summit 2017                               3119\n",
+       "Web Summit 2016                               2076\n",
+       "Mobile World Congress 2016                    1627\n",
+       "RSA Conference 2018                           1408\n",
+       "                                              ... \n",
+       "RAN World                                        1\n",
+       "Biometric Summit London 2019                     1\n",
+       "IEEE Hot Interconnects Conference 2019           1\n",
+       "ACE Money Transfer Global Remittance Event       1\n",
+       "IPV's 3rd VC Showcase                            1\n",
+       "Name: event_name, Length: 18784, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top50_events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "compact-holiday",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_names = event_appear_df.groupby('event_name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "precious-valuable",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'sort'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-4c23be259120>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mevent_names\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5463\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5464\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5465\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5466\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5467\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'sort'"
+     ]
+    }
+   ],
+   "source": [
+    "event_names.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sixth-scope",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
